# challenge1-data-science-latam

./: .gitignore  AluraStoreLatam.ipynb  README.md  pyproject.toml
