[tool.poetry]
name = "challenge1-data-science-latam"
version = "0.1.0"
description = ""
authors = ["Nicolas Ruiz"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.3.1"
matplotlib = "^3.10.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
